--- a/source/sass/blocks/logo.scss
+++ b/source/sass/blocks/logo.scss
@@ -43,8 +43,10 @@
 
 @media (max-width: $mobile-width-only) {
   .logo__image {
-    width: 38px;
-    height: 38px;
+    &--header {
+      width: 38px;
+      height: 38px;
+    }
   }
 
   .logo__maintext {
