--- a/source/sass/blocks/about-company.scss
+++ b/source/sass/blocks/about-company.scss
@@ -120,6 +120,7 @@
   .about-company {
     @include empty-rule;
     margin-bottom: 65px;
+    margin-left: 14px;
   }
 
   .about-company__img {
@@ -127,20 +128,20 @@
   }
 
   .about-company__wrapper {
-    @include empty-rule;
+    margin-left: 0;
   }
 
   .about-company__title {
     font-size: 28px;
     line-height: 39px;
-    margin-bottom: 18px;
+    margin-bottom: 21px;
   }
 
   .about-company__text {
-    @include empty-rule;
+    margin-bottom: 40px;
   }
 
   .about-company__btn {
-    margin-top: 0;
+    margin-top: -12px;
   }
 }
