--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -40,3 +40,11 @@
     margin-right: -9px;
   }
 }
+
+
+@media (max-width: $mobile-width-only) {
+  .social__list {
+    margin-top: 2px;
+    margin-right: -15px;
+  }
+}
