--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -5,6 +5,7 @@
 @import "blocks/main-header.scss";
 @import "blocks/logo.scss";
 @import "blocks/main-screen.scss";
+@import "blocks/advantages-and-about-company-wrapper.scss";
 @import "blocks/advantages.scss";
 @import "blocks/about-company.scss";
 @import "blocks/goods.scss";
